@@ -1,2 +1,6 @@
 ### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
-[a=<uninitialized>, b=<uninitialized>, c=<uninitialized>]
+[a={
+
+}, b={
+
+}, c=[]]
